--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -20,3 +20,10 @@ body {
 *::selection {
 	background: #ddd;
 }
+
+.CodeMirror {
+	width: 100% !important;
+	height: 100% !important;
+	padding: 0 !important;
+	margin: 0 !important;
+}
