--- a/styles/App.module.scss
+++ b/styles/App.module.scss
@@ -4,7 +4,7 @@
  * ejcobb@mtu.edu
  */
 
- $headerSize: 64px;
+$headerSize: 64px;
 
 .App {
 	width: 100%;
@@ -20,7 +20,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	box-shadow: 0 0 16px #333;
+	border-bottom: solid 1px #888;
 }
 
 .section {
@@ -62,16 +62,25 @@
 
 .container {
 	display: grid;
-	height: calc(100vh - $headerSize - 24px);
-	margin-top: 24px;
+	height: calc(100vh - #{$headerSize});
 	width: 100%;
+	overflow-y: auto;
 	grid-template-columns: 50% 50%;
 }
 
 .editor, .markdown {
-	overflow: hidden;
-	height: 100%;
 	width: 100%;
+	overflow-y: auto;
+}
+
+.markdown {
+
+}
+
+.editor {
+	overflow: hidden;
+	height: 100% !important;
+	padding: 0 !important;
 }
 
 .themeButton {
@@ -94,4 +103,7 @@
 .dark {
 	background: #1e1e1e;
 	color: white;
+	*::selection {
+		background: #555;
+	}
 }
