--- a/styles/App.module.scss
+++ b/styles/App.module.scss
@@ -28,6 +28,28 @@ $headerSize: 64px;
 	align-items: center;
 }
 
+.download {
+
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border: solid 1px rgba(0, 0, 0, 0.12);
+	border-radius: 4px;
+	width: 48px;
+	height: 48px;
+	margin-right: 16px;
+
+	& > * {
+		width: 24px;
+		height: 24px;
+	}
+}
+
+.download:hover {
+	background: rgba(0, 0, 0, 0.08);
+	cursor: pointer;
+}
+
 .logo {
 	border-radius: 25%;
 }
@@ -56,12 +78,12 @@ $headerSize: 64px;
 }
 
 .name {
-	font-size: 26px;
-	font-weight: bold;
+	font-size: 18px;
 	border: none;
 	outline: none;
 	background: none;
 	color: inherit;
+	width: 160px;
 }
 
 .profile {
