--- a/public/academic.css
+++ b/public/academic.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto+Mono&family=Roboto:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap');
+
 
 @font-face {
     font-family: "Latex";
@@ -6,7 +6,7 @@
 }
 
 .root {
-    font-family: 'Latex', serif;
+    font-family: 'Latex', monospace;
     font-size: 12px;
     line-height: 1.5;
 }
