--- a/public/pdf.css
+++ b/public/pdf.css
@@ -24,7 +24,7 @@
 }
 
 .root {
-    font-family: 'Computer Modern', serif;
+    font-family: "Computer Modern", monospace;
     font-size: 12px;
     line-height: 2;
 }
