new styling and system

--- a/styles/App.module.scss
+++ b/styles/App.module.scss
@@ -57,6 +57,7 @@ $headerSize: 64px;
 .save {
 	font-weight: lighter;
 	margin-left: 8px;
+	margin-right: 16px;
 	font-size: 16px;
 }
 
@@ -83,7 +84,7 @@ $headerSize: 64px;
 	outline: none;
 	background: none;
 	color: inherit;
-	width: 160px;
+	width: 300px;
 }
 
 .profile {
