--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,12 +7,13 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:ital,wght@0,400;0,700;1,400&family=Roboto:ital,wght@0,300;0,400;0,700;1,400;1,700&display=swap');
 
+@import "colors";
+
 body {
 	font-family: "Roboto", "sans-serif";
 	height: 100vh;
 	overflow: hidden;
 }
-
 
 * {
 	margin: 0;
