--- a/styles/DirectoryPage.module.scss
+++ b/styles/DirectoryPage.module.scss
@@ -5,7 +5,7 @@
  */
 
 .container {
-
+	position: static;
 }
 
 .add, .folder {
@@ -40,4 +40,24 @@
 	width: 48px;
 	height: 48px;
 	color: var(--background);
+}
+
+.folderButton {
+	width: 24px;
+	height: 24px;
+}
+
+.nofile {
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	top: 50vh;
+	position: absolute;
+	left: 0;
+
+	span {
+		display: block;
+		color: gray;
+	}
 }
