--- a/styles/NavBar.module.scss
+++ b/styles/NavBar.module.scss
@@ -19,12 +19,13 @@
 	display: flex;
 	align-items: center;
 
-	* {
+	& > * {
 		display: block;
 	}
 
 	img {
 		width: 48px;
+		margin-right: 32px;
 	}
 
 	span {
