--- a/styles/About.module.scss
+++ b/styles/About.module.scss
@@ -56,7 +56,7 @@
 .body {
 
 	height: 100vh;
-	width: 100vw;
+	width: 100%;
 	overflow-y: scroll;
 
 	footer {
@@ -73,7 +73,7 @@
 
 	section {
 		height: 80vh;
-		width: 100vw;
+		width: 100%;
 		display: flex;
 		justify-content: flex-start;
 		align-items: center;
