--- a/styles/Analytics.module.scss
+++ b/styles/Analytics.module.scss
@@ -42,6 +42,10 @@
 	}
 }
 
+.countName, .countValue {
+	color: white;
+}
+
 .countName {
 	font-weight: bold;
 	font-family: "Roboto Mono", monospace;
