--- a/styles/Analytics.module.scss
+++ b/styles/Analytics.module.scss
@@ -5,20 +5,28 @@
  */
 
 .Analytics {
-
+	height: 100vh;
+	display: flex;
+	flex-direction: column;
 }
 
 .main {
+	padding: 32px;
 	display: flex;
 	flex-direction: column;
 	width: 100vw;
-	justify-content: flex-start;
 	align-items: center;
+	flex-grow: 1;
+	overflow-y: scroll;
+
+	h2 {
+		margin: 32px 0;
+	}
 }
 
 .counts,.users {
 	width: 80%;
-	max-width: 1024px;
+	max-width: 1200px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -31,10 +39,10 @@
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	padding: 32px;
-	margin: 32px;
+	padding: 16px;
+	margin: 16px;
 	background: dodgerblue;
-	border-radius: 16px;
+	border-radius: 8px;
 	box-shadow: 0 0 16px var(--secondary);
 
 	& > * {
@@ -49,7 +57,7 @@
 .countName {
 	font-weight: bold;
 	font-family: "Roboto Mono", monospace;
-	font-size: 72px;
+	font-size: 64px;
 }
 
 .countValue {
