switch to invite only

--- a/styles/Markdown.module.scss
+++ b/styles/Markdown.module.scss
@@ -9,7 +9,9 @@ $spacing: 16px;
 .mdDefault {
 	img, * img {
 		display: block;
-		width: 100%;
+		max-width: 100%;
+		object-fit: contain;
+		background: none;
 	}
 }
 
