done with top bar redo

--- a/styles/App.module.scss
+++ b/styles/App.module.scss
@@ -6,28 +6,6 @@
 
 $headerSize: 64px;
 
-.App {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	flex-direction: column;
-}
-
-.header {
-	width: 100%;
-	height: $headerSize;
-	z-index: 34;
-	display: flex;
-	align-items: center;
-	justify-content: space-between;
-	border-bottom: solid 1px #888;
-}
-
-.section {
-	display: flex;
-	align-items: center;
-}
-
 .loading {
 	background: rgba(0, 0, 0,0.5);
 	position: absolute;
@@ -58,126 +36,41 @@ $headerSize: 64px;
 	}
 }
 
-.download, .upload {
-
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	border: solid 1px rgba(0, 0, 0, 0.12);
-	border-radius: 4px;
-	width: 48px;
-	height: 48px;
-	margin-right: 16px;
-
-	& > * {
-		width: 24px;
-		height: 24px;
-	}
-}
-
-.download:hover, .upload:hover {
-	background: rgba(0, 0, 0, 0.08);
-	cursor: pointer;
-}
-
-.folder {
-	transition: transform 250ms ease-in-out;
-	&:hover {
-		cursor: pointer;
-		transform: scale(1.05);
-	}
-}
-
-.sep {
-	margin: 0 4px;
-}
-
-.save {
-	font-weight: lighter;
-	margin-left: 8px;
-	margin-right: 16px;
-	font-size: 16px;
-}
-
-.unsaved, .saved, .saveError {
-	width: 24px;
-	height: 24px;
-}
-
-.saveError {
-	color: firebrick;
-}
-
-.unsaved {
-	color: #555;
-}
-
-.saved {
-	color: dodgerblue;
-}
-
-.name {
-	font-size: 18px;
-	border: none;
-	outline: none;
-	background: none;
-	color: inherit;
-	width: 300px;
-}
-
-.profile {
-	border-radius: 50%;
-}
-
-.logo, .profile {
-	width: $headerSize * 0.75;
-	height: $headerSize * 0.75;
-	margin: 0 16px;
-	&:hover {cursor: pointer}
-}
-
-.container {
-	display: grid;
-	height: calc(100vh - #{$headerSize});
-	width: 100%;
-	overflow-y: auto;
-}
-
 .picker {
 	margin-right: 32px;
 }
 
-.editor, .markdown {
-	width: 100%;
-	overflow-y: auto;
+.App {
+	width: 100vw;
+	height: 100vh;
+	//display: flex;
+	//flex-direction: column;
+	* {
+		//border: solid 1px red !important;
+	}
 }
 
-.markdown {
+.container {
+	display: grid;
+	grid-template-columns: 50% 50%;
+	grid-template-rows: 100%;
+	height: calc(100vh - #{$headerSize})
+}
 
+
+.markdown {
+	overflow-y: auto;
+	height: 100%;
+}
+
+.markdown, .editor {
+	overflow-y: auto;
+	height: 100%;
 }
 
 .editor {
 	overflow: hidden;
-	height: 100% !important;
-	padding: 0 !important;
 }
-
-.themeButton {
-	margin-right: 16px;
-	transition: all 250ms ease-in-out;
-	display: flex;
-	align-items: center;
-	justify-content: center;
-	padding: 4px;
-	border-radius: 8px;
-	&:hover {
-		box-shadow: 0 0 10px #666;
-		border-radius: 8px;
-		transform: scale(1.25);
-		cursor: pointer;
-	}
-}
-
 
 .dark {
 	background: #1e1e1e;
