access control done

--- a/styles/File.module.scss
+++ b/styles/File.module.scss
@@ -26,6 +26,13 @@
 
 }
 
+.access {
+	width: 16px;
+	height: 16px;
+	margin-right: 8px;
+	color: #888;
+}
+
 .option {
 	transition: all 250ms ease-in-out;
 	border-radius: 25%;
