--- a/styles/EditorAttachmentManager.module.scss
+++ b/styles/EditorAttachmentManager.module.scss
@@ -19,10 +19,13 @@
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	& > * {
+		width: 20px;
+	}
 }
 
 .left {
-	padding: 10px;
+	padding: 6px 4px;
 }
 
 .right {
@@ -31,6 +34,17 @@
 	&:hover {
 		background: rgba(0, 0, 0, 0.05);
 		cursor: pointer;
+	}
+}
+
+@media (min-width: 800px) {
+	.left, .right {
+		& > * {
+			width: 32px;
+		}
+	}
+	.left {
+		padding: 10px 4px;
 	}
 }
 
