--- a/styles/Sketch.module.scss
+++ b/styles/Sketch.module.scss
@@ -23,15 +23,16 @@
 
 .container {
 	background: white;
-	border-radius: 16px;
-	box-shadow: 0 0 16px #888;
+	//border-radius: 16px;
+	//box-shadow: 0 0 16px #888;
 	overflow: hidden;
 	display: flex;
-	flex-direction: column;
-	resize: vertical;
+	//resize: vertical;
 	min-height: 280px;
-	max-height: 90vh;
-	height: 60vh;
+	max-height: 100%;
+	//height: 60vh;
+	width: 100%;
+	height: 100%;
 }
 
 .canvas {
@@ -50,11 +51,12 @@
 
 .group {
 	display: flex;
+	flex-direction: column;
 	justify-content: space-between;
 	align-items: center;
 
 	& > * {
-		margin: 0 8px;
+		margin: 8px 0;
 	}
 }
 
@@ -78,8 +80,9 @@
 
 .top {
 	display: flex;
-	border-bottom: solid 1px #eee;
-	padding: 16px;
+	background: #f8f8f8;
+	padding: 8px;
+	flex-direction: column;
 	z-index: 8;
-	width: 100%;
+	height: 100%;
 }
