--- a/styles/EditorTopButton.module.scss
+++ b/styles/EditorTopButton.module.scss
@@ -7,6 +7,8 @@
 .container {
 	width: 48px;
 	height: 48px;
+	min-width: 48px;
+	min-height: 48px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
